target/src/PLParser.java
// Generated from java-escape by ANTLR 4.11.1

import backend.*;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, Whitespace=27, STRING=28, NUMBER=29, NAME=30;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_expr1 = 2, RULE_argsList = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "expr1", "argsList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'for('", "'in'", "'..'", "')'", "'{'", "'}'", "'function'", "'('", 
			"','", "'if'", "'else'", "';'", "'print('", "'+'", "'-'", "'*'", "'/'", 
			"'++'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'let'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "Whitespace", "STRING", "NUMBER", "NAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public PLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Expr expr;
		public StatementContext statement;
		public TerminalNode EOF() { return getToken(PLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<Expr> statements = new ArrayList<Expr>();
			setState(12); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(9);
				((ProgramContext)_localctx).statement = statement();
				statements.add(((ProgramContext)_localctx).statement.expr);
				}
				}
				setState(14); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 1912612226L) != 0 );
			setState(16);
			match(EOF);
			((ProgramContext)_localctx).expr =  new Block(statements);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Expr expr;
		public Token a;
		public Expr1Context sta;
		public Expr1Context end;
		public StatementContext s;
		public Token fName;
		public Token stra;
		public Token strb;
		public StatementContext st;
		public Expr1Context cond;
		public StatementContext st2;
		public Expr1Context ex1;
		public List<TerminalNode> NAME() { return getTokens(PLParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(PLParser.NAME, i);
		}
		public List<Expr1Context> expr1() {
			return getRuleContexts(Expr1Context.class);
		}
		public Expr1Context expr1(int i) {
			return getRuleContext(Expr1Context.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				List<Expr> loopstates = new ArrayList<Expr>();
				setState(20);
				match(T__0);
				setState(21);
				((StatementContext)_localctx).a = match(NAME);
				setState(22);
				match(T__1);
				setState(23);
				((StatementContext)_localctx).sta = expr1(0);
				setState(24);
				match(T__2);
				setState(25);
				((StatementContext)_localctx).end = expr1(0);
				setState(26);
				match(T__3);
				setState(27);
				match(T__4);
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 1912612226L) != 0) {
					{
					{
					setState(28);
					((StatementContext)_localctx).s = statement();
					 loopstates.add(((StatementContext)_localctx).s.expr); 
					}
					}
					setState(35);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(36);
				match(T__5);
				 ((StatementContext)_localctx).expr =  new 
				    intIteration((((StatementContext)_localctx).a!=null?((StatementContext)_localctx).a.getText():null), ((StatementContext)_localctx).sta.expr, ((StatementContext)_localctx).end.expr, new Block(loopstates)); 
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				 List<String> params = new ArrayList<String>();
				setState(40);
				match(T__6);
				setState(41);
				((StatementContext)_localctx).fName = match(NAME);
				setState(42);
				match(T__7);
				setState(43);
				((StatementContext)_localctx).stra = match(NAME);
				 params.add((((StatementContext)_localctx).stra!=null?((StatementContext)_localctx).stra.getText():null)); 
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(45);
					match(T__8);
					setState(46);
					((StatementContext)_localctx).strb = match(NAME);
					 params.add((((StatementContext)_localctx).strb!=null?((StatementContext)_localctx).strb.getText():null)); 
					}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(53);
				match(T__3);
				setState(54);
				match(T__4);
				 List<Expr> lines = new ArrayList<Expr>(); 
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 1912612226L) != 0) {
					{
					{
					setState(56);
					((StatementContext)_localctx).st = statement();
					lines.add(((StatementContext)_localctx).st.expr); 
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(64);
				match(T__5);
				 ((StatementContext)_localctx).expr =  new Declare((((StatementContext)_localctx).fName!=null?((StatementContext)_localctx).fName.getText():null), params , new Block(lines));
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(T__9);
				setState(67);
				match(T__7);
				setState(68);
				((StatementContext)_localctx).cond = expr1(0);
				setState(69);
				match(T__3);
				setState(70);
				match(T__4);
				 List<Expr> statementscnd = new ArrayList<Expr>(); 
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 1912612226L) != 0) {
					{
					{
					setState(72);
					((StatementContext)_localctx).st = statement();
					 statementscnd.add(((StatementContext)_localctx).st.expr); 
					}
					}
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(80);
				match(T__5);
				setState(81);
				match(T__10);
				setState(82);
				match(T__4);
				 List<Expr> 
				    statementscnd2 = new ArrayList<Expr>(); 
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 1912612226L) != 0) {
					{
					{
					setState(84);
					((StatementContext)_localctx).st2 = statement();
					 statementscnd2.add(((StatementContext)_localctx).st2.expr); 
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(92);
				match(T__5);
				 ((StatementContext)_localctx).expr =  new Ifelse(((StatementContext)_localctx).cond.expr, new Block(statementscnd), new 
				    Block(statementscnd2));
				}
				break;
			case T__7:
			case T__12:
			case T__24:
			case STRING:
			case NUMBER:
			case NAME:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				((StatementContext)_localctx).ex1 = expr1(0);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__11) {
					{
					setState(96);
					match(T__11);
					}
				}

				 ((StatementContext)_localctx).expr =  ((StatementContext)_localctx).ex1.expr; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr1Context extends ParserRuleContext {
		public Expr expr;
		public Expr1Context ex1;
		public Expr1Context e;
		public Expr1Context expr1;
		public Token id;
		public ArgsListContext arguments;
		public Token NAME;
		public Token fName;
		public Token STRING;
		public Token NUMBER;
		public Expr1Context ex2;
		public List<Expr1Context> expr1() {
			return getRuleContexts(Expr1Context.class);
		}
		public Expr1Context expr1(int i) {
			return getRuleContext(Expr1Context.class,i);
		}
		public TerminalNode NAME() { return getToken(PLParser.NAME, 0); }
		public ArgsListContext argsList() {
			return getRuleContext(ArgsListContext.class,0);
		}
		public TerminalNode STRING() { return getToken(PLParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(PLParser.NUMBER, 0); }
		public Expr1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr1; }
	}

	public final Expr1Context expr1() throws RecognitionException {
		return expr1(0);
	}

	private Expr1Context expr1(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expr1Context _localctx = new Expr1Context(_ctx, _parentState);
		Expr1Context _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expr1, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(104);
				match(T__12);
				setState(105);
				((Expr1Context)_localctx).e = ((Expr1Context)_localctx).expr1 = expr1(0);
				setState(106);
				match(T__3);
				setState(108);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(107);
					match(T__11);
					}
					break;
				}
				 ((Expr1Context)_localctx).expr =  new ioPrint(((Expr1Context)_localctx).e.expr); 
				}
				break;
			case 2:
				{
				setState(112);
				((Expr1Context)_localctx).id = match(NAME);
				setState(113);
				match(T__7);
				setState(114);
				((Expr1Context)_localctx).arguments = argsList();
				setState(115);
				match(T__3);
				 ((Expr1Context)_localctx).expr =  new Invoke((((Expr1Context)_localctx).id!=null?((Expr1Context)_localctx).id.getText():null), ((Expr1Context)_localctx).arguments.args); 
				}
				break;
			case 3:
				{
				setState(118);
				match(T__7);
				setState(119);
				((Expr1Context)_localctx).e = ((Expr1Context)_localctx).expr1 = expr1(0);
				setState(120);
				match(T__3);
				 ((Expr1Context)_localctx).expr = ((Expr1Context)_localctx).e.expr; 
				}
				break;
			case 4:
				{
				setState(123);
				((Expr1Context)_localctx).id = match(NAME);
				 ((Expr1Context)_localctx).expr =  new Deref((((Expr1Context)_localctx).id!=null?((Expr1Context)_localctx).id.getText():null)); 
				}
				break;
			case 5:
				{
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__24) {
					{
					setState(125);
					match(T__24);
					}
				}

				setState(128);
				((Expr1Context)_localctx).NAME = match(NAME);
				setState(129);
				match(T__25);
				setState(130);
				((Expr1Context)_localctx).expr1 = expr1(5);
				((Expr1Context)_localctx).expr =  new Assign((((Expr1Context)_localctx).NAME!=null?((Expr1Context)_localctx).NAME.getText():null),((Expr1Context)_localctx).expr1.expr);
				}
				break;
			case 6:
				{
				setState(133);
				match(T__12);
				setState(134);
				((Expr1Context)_localctx).ex1 = ((Expr1Context)_localctx).expr1 = expr1(0);
				setState(135);
				match(T__3);
				setState(137);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(136);
					match(T__11);
					}
					break;
				}
				 ((Expr1Context)_localctx).expr =  new ioPrint(((Expr1Context)_localctx).ex1.expr); 
				}
				break;
			case 7:
				{
				setState(141);
				((Expr1Context)_localctx).fName = match(NAME);
				setState(142);
				match(T__7);
				setState(143);
				((Expr1Context)_localctx).arguments = argsList();
				setState(144);
				match(T__3);
				 ((Expr1Context)_localctx).expr =  new Invoke((((Expr1Context)_localctx).fName!=null?((Expr1Context)_localctx).fName.getText():null), ((Expr1Context)_localctx).arguments.args);
				}
				break;
			case 8:
				{
				setState(147);
				((Expr1Context)_localctx).STRING = match(STRING);
				((Expr1Context)_localctx).expr =  new StringLiteral((((Expr1Context)_localctx).STRING!=null?((Expr1Context)_localctx).STRING.getText():null));
				}
				break;
			case 9:
				{
				setState(149);
				((Expr1Context)_localctx).NUMBER = match(NUMBER);
				((Expr1Context)_localctx).expr =  new IntLiteral((((Expr1Context)_localctx).NUMBER!=null?((Expr1Context)_localctx).NUMBER.getText():null));
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(210);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(208);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(153);
						if (!(precpred(_ctx, 18))) throw new FailedPredicateException(this, "precpred(_ctx, 18)");
						setState(154);
						match(T__13);
						setState(155);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(19);
						((Expr1Context)_localctx).expr =  new Arithmetics(Operator.Add,((Expr1Context)_localctx).ex1.expr,((Expr1Context)_localctx).ex2.expr);
						}
						break;
					case 2:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(158);
						if (!(precpred(_ctx, 17))) throw new FailedPredicateException(this, "precpred(_ctx, 17)");
						setState(159);
						match(T__14);
						setState(160);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(18);
						((Expr1Context)_localctx).expr =  new Arithmetics(Operator.Sub,((Expr1Context)_localctx).ex1.expr,((Expr1Context)_localctx).ex2.expr);
						}
						break;
					case 3:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(163);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(164);
						match(T__15);
						setState(165);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(17);
						((Expr1Context)_localctx).expr =  new Arithmetics(Operator.Mul,((Expr1Context)_localctx).ex1.expr,((Expr1Context)_localctx).ex2.expr);
						}
						break;
					case 4:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(168);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(169);
						match(T__16);
						setState(170);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(16);
						((Expr1Context)_localctx).expr =  new Arithmetics(Operator.Div,((Expr1Context)_localctx).ex1.expr,((Expr1Context)_localctx).ex2.expr);
						}
						break;
					case 5:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(173);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(174);
						match(T__17);
						setState(175);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(15);
						((Expr1Context)_localctx).expr =  new Concat(((Expr1Context)_localctx).ex1.expr,((Expr1Context)_localctx).ex2.expr);
						}
						break;
					case 6:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(178);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(179);
						match(T__18);
						setState(180);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(14);
						 ((Expr1Context)_localctx).expr =  new Compare(ComparatorOP.LT, ((Expr1Context)_localctx).ex1.expr, ((Expr1Context)_localctx).ex2.expr); 
						}
						break;
					case 7:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(183);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(184);
						match(T__19);
						setState(185);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(13);
						 ((Expr1Context)_localctx).expr =  new Compare(ComparatorOP.LE, ((Expr1Context)_localctx).ex1.expr, ((Expr1Context)_localctx).ex2.expr); 
						}
						break;
					case 8:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(188);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(189);
						match(T__20);
						setState(190);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(12);
						 ((Expr1Context)_localctx).expr =  new Compare(ComparatorOP.GT, ((Expr1Context)_localctx).ex1.expr, ((Expr1Context)_localctx).ex2.expr); 
						}
						break;
					case 9:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(193);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(194);
						match(T__21);
						setState(195);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(11);
						 ((Expr1Context)_localctx).expr =  new Compare(ComparatorOP.GE, ((Expr1Context)_localctx).ex1.expr, ((Expr1Context)_localctx).ex2.expr); 
						}
						break;
					case 10:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(198);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(199);
						match(T__22);
						setState(200);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(10);
						 ((Expr1Context)_localctx).expr =  new Compare(ComparatorOP.EQ, ((Expr1Context)_localctx).ex1.expr, ((Expr1Context)_localctx).ex2.expr); 
						}
						break;
					case 11:
						{
						_localctx = new Expr1Context(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr1);
						setState(203);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(204);
						match(T__23);
						setState(205);
						((Expr1Context)_localctx).ex2 = ((Expr1Context)_localctx).expr1 = expr1(9);
						 ((Expr1Context)_localctx).expr =  new Compare(ComparatorOP.NE, ((Expr1Context)_localctx).ex1.expr, ((Expr1Context)_localctx).ex2.expr); 
						}
						break;
					}
					} 
				}
				setState(212);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgsListContext extends ParserRuleContext {
		public List<Expr> args;
		public Expr1Context e1;
		public Expr1Context e2;
		public List<Expr1Context> expr1() {
			return getRuleContexts(Expr1Context.class);
		}
		public Expr1Context expr1(int i) {
			return getRuleContext(Expr1Context.class,i);
		}
		public ArgsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argsList; }
	}

	public final ArgsListContext argsList() throws RecognitionException {
		ArgsListContext _localctx = new ArgsListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<Expr> arguments = new ArrayList<Expr>(); 
			setState(214);
			((ArgsListContext)_localctx).e1 = expr1(0);
			 arguments.add(((ArgsListContext)_localctx).e1.expr); 
			setState(222);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(216);
				match(T__8);
				setState(217);
				((ArgsListContext)_localctx).e2 = expr1(0);
				 arguments.add(((ArgsListContext)_localctx).e2.expr); 
				}
				}
				setState(224);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((ArgsListContext)_localctx).args =  arguments; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 2:
			return expr1_sempred((Expr1Context)_localctx, predIndex);
		}
		return true;
	}
	private boolean expr1_sempred(Expr1Context _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 18);
		case 1:
			return precpred(_ctx, 17);
		case 2:
			return precpred(_ctx, 16);
		case 3:
			return precpred(_ctx, 15);
		case 4:
			return precpred(_ctx, 14);
		case 5:
			return precpred(_ctx, 13);
		case 6:
			return precpred(_ctx, 12);
		case 7:
			return precpred(_ctx, 11);
		case 8:
			return precpred(_ctx, 10);
		case 9:
			return precpred(_ctx, 9);
		case 10:
			return precpred(_ctx, 8);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}